menu updates and donations-hooks initial commit

--- a/website/etc/megamenu.html
+++ b/website/etc/megamenu.html
@@ -289,7 +289,7 @@
                     <a href="{{link_url::234}}">Press Events</a>
                 </li>
                 <li>
-                    <a href="{{link_url::290}}">Press Reviews</a>
+                    <a href="{{link_url::290}}">GC in the Press</a>
                 </li>
                 <li>
                     <a href="{{link_url::236}}">Media Gallery</a>
@@ -509,7 +509,7 @@
                     <a href="{{link_url::234}}">Press Events</a>
                 </li>
                 <li>
-                    <a href="{{link_url::290}}">Press Reviews</a>
+                    <a href="{{link_url::290}}">GC in the Press</a>
                 </li>
                 <li>
                     <a href="{{link_url::236}}">Media Gallery</a>
