--- a/website/etc/menumobile.html
+++ b/website/etc/menumobile.html
@@ -274,7 +274,7 @@
                                             <a href="{{link_url::234}}">Press Events</a>
                                         </li>
                                         <li>
-                                            <a href="{{link_url::290}}">Press Reviews</a>
+                                            <a href="{{link_url::290}}">GC in the Press</a>
                                         </li>
                                         <li>
                                             <a href="{{link_url::236}}">Media Gallery</a>
@@ -469,7 +469,7 @@
                                                 <a href="{{link_url::234}}">Press Events</a>
                                             </li>
                                             <li>
-                                                <a href="{{link_url::290}}">Press Reviews</a>
+                                                <a href="{{link_url::290}}">GC in the Press</a>
                                             </li>
                                             <li>
                                                 <a href="{{link_url::236}}">Media Gallery</a>
