--- a/website/05-Support-us/JOIN-US/Donations/donations-hooks.html
+++ b/website/05-Support-us/JOIN-US/Donations/donations-hooks.html
@@ -1,16 +1,16 @@
 <div class="table_partners no_margin_bottom">
     <div class="table_donations"><img class="icona_donations" src="files/eiuc/icona_general_donations.svg" alt="icona general donations">
-        <p class="title_course titolo_gc_europe margin_top_30">General donations</p>
-        <p class="margin_bottom_80">A donation helps to fund the everyday functions of our institution.</p>
+        <p class="title_course titolo_gc_europe margin_top_30">General donation</p>
+        <p class="margin_bottom_80">This donation helps fund the everyday functions of the Global Campus.</p>
         <a class="margin_top_auto" href="{{link_url::260}}"> <button class="button button--aylen button_europe button--aylen_europe no_margin_bottom">Donate now</button> </a>
     </div>
     <div class="table_donations"><img class="icona_donations" src="files/eiuc/icona_particular_donations.svg" alt="icona particular donations">
-        <p class="title_course titolo_gc_europe margin_top_30">Particular donations</p>
-        <p class="margin_bottom_80">Support Scholarship, Internships [&amp;] Fellowships or Professorship.</p>
+        <p class="title_course titolo_gc_europe margin_top_30">Specific donation</p>
+        <p class="margin_bottom_80">Support scholarship, internships, fellowships or professorship.</p>
         <a class="margin_top_auto" href="{{link_url::261}}"> <button class="button button--aylen button_europe button--aylen_europe no_margin_bottom">Donate now</button> </a>
     </div>
     <div class="table_donations"><img class="icona_donations" src="files/eiuc/icona_legacy_donations.svg" alt="icona legacy donations">
-        <p class="title_course titolo_gc_europe margin_top_30">Legacy donations</p>
+        <p class="title_course titolo_gc_europe margin_top_30">Legacies and in memoriam</p>
         <p class="margin_bottom_80">Celebrate a loved one's life by making a donation in their memory.</p>
         <a class="margin_top_auto" href="{{link_url::262}}"> <button class="button button--aylen button_europe button--aylen_europe no_margin_bottom">Donate now</button> </a>
     </div>
