--- a/website/05-Support-us/hooks-part1.html
+++ b/website/05-Support-us/hooks-part1.html
@@ -27,8 +27,8 @@
         </div>
         <div class="recensione"><img class="img_recensione" src="files/eiuc/img_shop_on_line.jpg" alt="Shop online">
             <div class="text_recensione">
-                <h3 class="title_box_about_us"><a href="{{link_url::34}}">Online Shop</a></h3>
-                <p>You can order our branded promotional materials like publications, handbags, T-shirts and others.</p>
+                <h3 class="title_box_about_us"><a href="{{link_url::34}}">5x1000</a></h3>
+                <p>Investiamo il tuo 5xmille in borse di studio per studenti con limitate possibilità economiche.</p>
                 <a class="freccia_dx" href="{{link_url::34}}"> <img src="files/eiuc/freccia-dx.svg" alt="freccia destra"> </a>
             </div>
         </div>
