minor tweaks part3

--- a/website/05-Support-us/JOIN-US/Partnership/partnership-part03.html
+++ b/website/05-Support-us/JOIN-US/Partnership/partnership-part03.html
@@ -1,4 +1,4 @@
-<p class="subtitle_page_programme">Pre-event promotion includes:</p>
+<p class="subtitle_page_programme">The pre-event promotion includes:</p>
 <ul class="lista_con_pallini">
     <li>Press kits delivered to major news agencies</li>
     <li>Brochures distributed worldwide by Global Campus partners</li>
