part4 initial draft

--- a/website/05-Support-us/JOIN-US/Partnership/partnership-part04.html
+++ b/website/05-Support-us/JOIN-US/Partnership/partnership-part04.html
@@ -1,6 +1,6 @@
-<p class="subtitle_page_programme">On-site promotion includes:</p>
+<p class="subtitle_page_programme">The on-site promotion includes:</p>
 <ul class="lista_con_pallini">
-    <li>Posters displayed in different locations;</li>
-    <li>Signage inside and outside the venues;</li>
-    <li>Flyers, programmes, full-colour posters;</li>
+	<li>Posters displayed in different locations</li>
+	<li>Signage inside and outside the venues</li>
+	<li>Flyers, programmes and full-colour posters</li>
 </ul>
