initial draft of donations

--- a/website/05-Support-us/JOIN-US/Donations/02-general-donation.html
+++ b/website/05-Support-us/JOIN-US/Donations/02-general-donation.html
@@ -1,2 +1,2 @@
 <h3 class="title_page_programme titolo_gc_europe margin_bottom_40">Make a general donation</h3>
-<p>Your gift helps fund the everyday functions of the Global Campus.</p>
+<p>YYour donation helps fund the everyday functions of the Global Campus: from education programmes, to specialized seminars and training activities for human rights practitioners. Our excellence relies on our generous donors.</p>
