--- a/website/05-Support-us/JOIN-US/Donations/04-legacy.html
+++ b/website/05-Support-us/JOIN-US/Donations/04-legacy.html
@@ -1,2 +1,2 @@
 <h3 class="title_page_programme titolo_gc_europe margin_bottom_40">Legacies and in memoriam</h3>
-<p>You could choose the way that best suits you among the general, particular and the legacy in memoriam of your loved one. With "Legacy donation" you can celebrate a loved one's life by making a donation in their memory.</p>
+<p>Make a legacy gift donation to ensure more human rights defenders and advocates can gain effective skills. Celebrate a loved one's life by making a donation in their memory. Let us know which Global Campus programme would best honour your precious loved one.</p>
