fundraising and 5x1000 initial commits

--- a/website/05-Support-us/JOIN-US/Fundraising/fundraising-part1.html
+++ b/website/05-Support-us/JOIN-US/Fundraising/fundraising-part1.html
@@ -1,2 +1,2 @@
-<p>You could follow us and donate to our specific campaigns using a simple click or engaging in a more active way proposing the new one. Moreover, you could search the one nearest to you and contribute locally.</p>
-<p>We implement our campaigns through some crowdfunding platforms, online ticket sales and other easy ways to reach our communities worldwide.</p>
+<p>Follow us and donate to our specific campaigns with a simple click or engage in a more proactive way by proposing a new one. You can also look for the campaign closest to you and contribute locally. </p>
+<p>We implement our campaigns through crowdfunding platforms, sales of online tickets and other effective ways to reach our communities worldwide. We also engage with art that stands for human rights.</p>
