fundrasing hooks initial draft

--- a/website/05-Support-us/JOIN-US/Fundraising/fundraising-part2.html
+++ b/website/05-Support-us/JOIN-US/Fundraising/fundraising-part2.html
@@ -3,7 +3,7 @@
         <div class="recensione"><img class="img_recensione" src="files/eiuc/supportus/5X1000.jpg" alt="global classroom">
             <div class="text_recensione">
                 <h3 class="title_box_about_us"><a href="{{link_url::246}}">5x1000</a></h3>
-                <p>Con il 5xmille contribuisci a creare nuove opportunità di formazione sui diritti umani. EIUC investirà le donazioni per offrire borse di studio a giovani studenti e ricercatori con limitate possibilità economiche al fine di poter partecipare ai corsi tenuti presso il suo Centro.</p>
+                <p>Con il 5xmille contribuisci a creare nuove opportunità di formazione sui diritti umani. Il Global Campus of Human Rights investirà le donazioni per offrire borse di studio a giovani studenti e ricercatori con limitate possibilità economiche al fine di poter partecipare ai corsi tenuti presso il suo Centro.</p>
                 <a class="freccia_dx" href="{{link_url::246}}"><img src="files/eiuc/freccia-dx.svg" alt="freccia destra"></a>
             </div>
         </div>
