fundraising hooks final draft

--- a/website/05-Support-us/JOIN-US/Fundraising/fundraising-part2.html
+++ b/website/05-Support-us/JOIN-US/Fundraising/fundraising-part2.html
@@ -10,7 +10,7 @@
         <div class="recensione">
             <div class="text_recensione">
                 <h3 class="title_box_about_us"><a href="{{link_url::247}}">Arts and Human Rights</a></h3>
-                <p>Recognizing the intersections between art, politics and social spheres and the potential of art as a communication tool in raising awareness for human rights issues is part of the vision of the institution.</p>
+                <p>As part of the Global Campus vision we recognize the intersection between art, politics and society and the potential of art as a communication tool in raising awareness of human rights issues.</p>
                 <a class="freccia_dx" href="{{link_url::247}}"><img src="files/eiuc/freccia-dx.svg" alt="freccia destra"></a>
             </div>
             <img class="img_recensione" src="files/eiuc/supportus/ARTS_AND_HUMAN_RIGHTS.jpg" alt="moot court eiuc global campus">
@@ -18,14 +18,14 @@
         <div class="recensione"><img class="img_recensione" src="files/eiuc/supportus/crowdfunding_720.jpg" alt="exchange professors">
             <div class="text_recensione">
                 <h3 class="title_box_about_us"><a href="{{link_url::248}}">Crowdfunding</a></h3>
-                <p>Crowdfunding makes use of the easy accessibility of our social media and crowdfunding websites to bring investors and people together.</p>
+                <p>We make the most of the easy accessibility of social media and crowdfunding websites to bring investors and people together. </p>
                 <a class="freccia_dx" href="{{link_url::248}}"><img src="files/eiuc/freccia-dx.svg" alt="freccia destra"></a>
             </div>
         </div>
         <div class="recensione">
             <div class="text_recensione">
                 <h3 class="title_box_about_us"><a href="{{link_url::249}}">UN Global Goals</a></h3>
-                <p>We have a common interest with many other organisations in implementing the 2030 UN Agenda to support the different Global Goals around the world.</p>
+                <p>We share a common interest with many other organisations in implementing the 2030 UN Agenda to support the Global Goals for Sustainable Development around the world.</p>
                 <a class="freccia_dx" href="{{link_url::249}}"><img src="files/eiuc/freccia-dx.svg" alt="freccia destra"></a>
             </div>
             <img class="img_recensione" src="files/eiuc/supportus/UN_GLOBAL_GOALS.jpg" alt="integrated teaching">
