crowfunding initial draft

--- a/website/05-Support-us/JOIN-US/Fundraising/crowfunding.html
+++ b/website/05-Support-us/JOIN-US/Fundraising/crowfunding.html
@@ -1,4 +1,4 @@
 <p class="subtitle_page_programme">Crowdfunding</p>
 <p class="margin_bottom_20">We make the most of the easy accessibility of social media and crowdfunding websites to bring investors and people together.</p>
-<p class="margin_bottom_20">Crowdfunding makes use of the easy accessibility of our social media and crowdfunding websites to bring investors and people together.</p>
-<p class="margin_bottom_20">Follow us in our social media channels for the latest news on the active crowdfunding campaigns, by subjects or regions of the world, to be able to contribute in the near future with different endeavours.</p>
+<p class="margin_bottom_20">Our network and supporters use crowdfunding tools to reach crucial objectives. Through small donations by a large number of individuals we are able fund specific projects.</p>
+<p class="margin_bottom_20">Follow our social media channels for the latest news on the active crowdfunding campaigns, by subjects or regions of the world.</p>
