pphr-about initial commit

--- a/website/02-Education/moocs/pphr/about.html
+++ b/website/02-Education/moocs/pphr/about.html
@@ -1,4 +1,15 @@
 <!--<p class="subtitle_page_programme">Introduction</p>-->
+<blockquote>
+    <p>
+        <strong>Unless it is nurtured by memory and history, human rights discourse is in danger of losing historical grounding and risks legalistic abstraction and political abuse</strong>
+    </p>
+</blockquote>
+<p>[nbsp]</p>
+<p>— Huyssen Andreas, <em>International human rights and the politics of memory: limits and challenges</em>, 2011, p.608.</p>
+
+
+
+
 <p class="margin_bottom_20">Children deprived of liberty are an often invisible and forgotten group who suffer from clear violations of human rights. Frequently placed in inhuman conditions and in adult facilities, they are at heightened risk of violence, rape and sexual assault, as well as torture and cruel, inhuman or degrading treatment or punishment. Not only does such deprivation of liberty damage their physical and psychological development, it also destroys their capacities and opportunities to conduct healthy lives and constructively contribute to society.</p>
 <p class="margin_bottom_20">Despite it being a known phenomenon, data on the number of these children, and on the reasons, length and places of their detention, are still largely lacking. In the same vein, information on good practices and alternative measures, as well as mechanisms for redress, is fragmented. This has important consequences: without a strong knowledge basis and a vigorous protection system, countless children throughout the world risk their human rights, and in some cases their lives, while societies miss out on the participation, ideas and talents that these young people could bring.</p>
 <p class="margin_bottom_20">In this light, the UN Global Study commissioned to Prof. Manfred Nowak is an opportunity to raise awareness about the manifold challenges in this area and to:</p>
