about initial draft

--- a/website/02-Education/moocs/pphr/about.html
+++ b/website/02-Education/moocs/pphr/about.html
@@ -1,17 +1,18 @@
-<!--<p class="subtitle_page_programme">Introduction</p>-->
+<!--QUOTE-->
 <blockquote>
     <p>
-        <strong>Unless it is nurtured by memory and history, human rights discourse is in danger of losing historical grounding and risks legalistic abstraction and political abuse</strong>
+        <strong>The protection and promotion of human rights have only a limited life in the legal phrasings of treaties; they must be given meaning in individual lives.</strong>
     </p>
 </blockquote>
 <p>[nbsp]</p>
-<p>— Huyssen Andreas, <em>International human rights and the politics of memory: limits and challenges</em>, 2011, p.608.</p>
+<p>— Sergio Vieira de Mello, Brazilian United Nations diplomat<!--<em>International human rights and the politics of memory: limits and challenges</em>, 2011, p.608.--></p>
 
 
 
-
-<p class="margin_bottom_20">Children deprived of liberty are an often invisible and forgotten group who suffer from clear violations of human rights. Frequently placed in inhuman conditions and in adult facilities, they are at heightened risk of violence, rape and sexual assault, as well as torture and cruel, inhuman or degrading treatment or punishment. Not only does such deprivation of liberty damage their physical and psychological development, it also destroys their capacities and opportunities to conduct healthy lives and constructively contribute to society.</p>
-<p class="margin_bottom_20">Despite it being a known phenomenon, data on the number of these children, and on the reasons, length and places of their detention, are still largely lacking. In the same vein, information on good practices and alternative measures, as well as mechanisms for redress, is fragmented. This has important consequences: without a strong knowledge basis and a vigorous protection system, countless children throughout the world risk their human rights, and in some cases their lives, while societies miss out on the participation, ideas and talents that these young people could bring.</p>
+<!-- MAIN CONTENT -->
+<p class="margin_bottom_20">Human rights are an inherent part of every individual. They are the outcome of long struggles and achievements. Responding to the necessity to counter - and in the future prevent - the tragic effects of genocide, war, economic depression, nationalism and colonialism, they were engraved in the Universal Declaration of Human Rights as "a common standard of achievement for all peoples and all nations". Then, they carried the hope for freedom, justice and peace in the world. Today, they are often questioned, attacked, dismissed and violated. But they still stand to remind us that “we are all born equal and free in dignity and rights”.</p>
+<p class="margin_bottom_20">Promoting and protecting human rights is yet a work in progress. Much still needs to be done, but we can build on the concrete improvements and achievements that human rights have already allowed over the years. We can defend cases, advocate for change and bring about progress on the basis of legal instruments and mechanisms: laws, institutions, courts. We can face challenges with the strength of the benefits that have been demonstrated around the world: greater freedom and democracy; better health, education, and standards of living. To continue our efforts, we need information, education, awareness and action. This course provides you with a solid basis to understand, know and stand up for human rights.</p>
+<!-- 
 <p class="margin_bottom_20">In this light, the UN Global Study commissioned to Prof. Manfred Nowak is an opportunity to raise awareness about the manifold challenges in this area and to:</p>
 <ul class="number_list margin_bottom_20">
     <li>Assess the magnitude of the occurrence of children deprived of liberty;</li>
@@ -20,8 +21,9 @@
     <li>Provide recommendations for law, policy and practice to safeguard the human rights of the children concerned.</li>
 </ul>
 <p class="margin_bottom_20">To amplify the impact of the Study, this MOOC will offer the opportunity to gain insights on the research, collection, analysis, and final elaboration of information related to specific areas and cross-cutting themes.</p>
-<p>[nbsp]</p>
-<div class="accordion margin_bottom_20 accordion_gc_europe">
+<p>[nbsp]</p> 
+-->
+<div class="accordion margin_bottom_10 accordion_gc_europe">
     <div class="icon_e_title_accordion">
         <div class="piu_accordion">
             <div class="verticale">[nbsp]</div>
@@ -30,14 +32,12 @@
         <p class="title_accordion titolo_gc_europe">Structure</p>
     </div>
     <div class="text_accordion">
-        <p class="margin_bottom_20">The course is articulated in four modules:</p>
-        <p class="margin_bottom_20"><strong>Module 1</strong> focuses on <strong>the general framework of the Study</strong> and looks at the legal framework, applicable standards, guiding principles, definitions, objectives and methodology. It also offers an overview of the history of the Global Study and its links with the work of the UN CRC Committee and the Special Rapporteur on the Sale and Sexual Exploitation of Children.</p>
-        <p class="margin_bottom_20"><strong>Module 2</strong> deals with the <strong>cross-cutting themes</strong> that have been identified in the Study: deprivation of liberty, children’s participation, disability, gender and health.</p>
-        <p class="margin_bottom_20"><strong>Module 3</strong> is dedicated to the <strong>six focus areas</strong> of the Study: administration of justice, children living in places of detention with their primary caregivers, migration-related detention, children deprived of liberty in institutions, in armed conflict and for national security reasons.</p>
-        <p class="margin_bottom_20"><strong>Module 4</strong> reveals the ‘behind the scenes’ of the making of the <strong>UN Global Study in practice</strong> and discusses challenges, opportunities, recommendations and the way forward.</p>
+        <p class="margin_bottom_20">The course is articulated in 2 modules: the first one (two classes) is recommended for all participants, while the second one (5 classes) is elective and can be composed of minimum 1 and maximum 5 classes, for a total of maximum 7 classes.</p>
+        <p class="margin_bottom_20"><strong>Module 1</strong> focuses on the international framework of human rights promotion and protection. In particular, it summarily explains standards, mechanisms, benefits and challenges in the current set up, especially at the United Nations level.</p>
+        <p class="margin_bottom_20"><strong>Module 2</strong>  is dedicated to regional perspectives on the standards, mechanisms, benefits and challenges in five regions of the world: Africa, the Americas, the Arab World, Asia Pacific, and Europe. In so doing, it specifically analyses the links with the international framework and the distinctive features of each geographical area. </p>
     </div>
 </div>
-<div class="accordion margin_bottom_20 accordion_gc_europe">
+<div class="accordion margin_bottom_10 accordion_gc_europe">
     <div class="icon_e_title_accordion">
         <div class="piu_accordion">
             <div class="verticale">[nbsp]</div>
@@ -46,19 +46,17 @@
         <p class="title_accordion titolo_gc_europe">Learning Outcomes</p>
     </div>
     <div class="text_accordion">
-        <p class="margin_bottom_20">Upon completion of this course participants will have acquired:</p>
+        <p class="margin_bottom_20">Upon completion of this course participants will have gained:</p>
         <ul class="lista_con_pallini margin_bottom_20">
-            <li>Understanding of the process behind the UN Global Study</li>
-            <li>Knowledge about international standards for the protection of the human rights of children deprived of liberty;</li>
-            <li>Awareness of data, reasons and root-causes in the area of deprivation of liberty for children;</li>
-            <li>Information on some contextual situations, examples, and practices from different regions of the world;</li>
-            <li>Understanding of challenges and limitations in the current systems;</li>
-            <li>The ability to identify some legal, political and social strategies to safeguard the human rights of children deprived of liberty;</li>
-            <li>Knowledge of recommendations to bring about change and improvements.</li>
+            <li>Knowledge about key historical, philosophical and legal developments</li>
+            <li>Understanding of progress and obstacles (overtime and current) </li>
+            <li>Ability to identify multi-faceted aspects (pros and cons)</li>
+            <li>Understanding of international legal frameworks, mechanisms and challenges</li>
+            <li>Capacity to discuss specific areas and groups/cases of concern</li>
         </ul>
     </div>
 </div>
-<div class="accordion margin_bottom_20 accordion_gc_europe">
+<div class="accordion margin_bottom_10 accordion_gc_europe">
     <div class="icon_e_title_accordion">
         <div class="piu_accordion">
             <div class="verticale">[nbsp]</div>
@@ -67,19 +65,22 @@
         <p class="title_accordion titolo_gc_europe">Methodology</p>
     </div>
     <div class="text_accordion">
-        <p class="margin_bottom_20">The course encompasses a 9-weeks period. Participants are expected to engage in approximately 45 hours of active learning through readings, videos, discussions, and quizzes. Case studies and examples from different areas of the world and on different themes will be used to identify cross-regional and cross-cutting issues and enable a global and multidimensional understanding of the topic.</p>
+        <p class="margin_bottom_20">The course is modelled on a flexible structure whereby the first Module (two classes) is general and the same for all participants, while the second Module (five classes) is composed of regional courses that can be selected by participants on the basis of their interests. For each class, participants are expected to engage in approximately 5 hours of active learning through readings, videos, and quizzes.
+        <br>The ideal time for completion would be around 7 weeks (one week per class) for a total of 35 hours, but it could take less or more depending on the pace that each participant sets for it. <!-- [Twice a year the MOOC will be offered in instructor-led mode, with the addition of fora for course discussions.]  -->Examples from different areas of the world and on different themes allow the identification of cross-regional and cross-cutting issues and enable a global and multidimensional understanding of the topic. </p>
+
     </div>
 </div>
-<div class="accordion margin_bottom_20 accordion_gc_europe">
+<div class="accordion margin_bottom_10 accordion_gc_europe">
     <div class="icon_e_title_accordion">
         <div class="piu_accordion">
             <div class="verticale">[nbsp]</div>
             <div class="orizzontale">[nbsp]</div>
         </div>
-        <p class="title_accordion titolo_gc_europe">Certificate of Participation</p>
+        <p class="title_accordion titolo_gc_europe">Certificate of Completion</p>
     </div>
     <div class="text_accordion">
-        <p class="margin_bottom_20">At the end of the course, participants who have successfully completed 5 weekly discussions and 4 quizzes will receive a certificate confirming their participation.</p>
+        <p class="margin_bottom_20">Given the flexible nature of the MOOC, it would be complex to issue a certificate for each varying degree and level of completion. For this reason, we give you the possibility to either audit the course to the extent that you wish or earn a certificate of participation upon completion of all 7 classes. If you decide to audit the course, you will not receive a certificate, but you can print your progress page if you want evidence of your achievement. </p>
+        <p class="margin_bottom_20">If you would like or need to have official proof that you have completed this MOOC, we offer you the option of requesting a Certificate of Completion with a Transcript of Records. In order to do so, you will have to successfully complete and pass all the 7 Classes of the course and related Quizzes.</p>
     </div>
 </div>
 <div class="accordion accordion_gc_europe">
@@ -91,6 +92,11 @@
         <p class="title_accordion titolo_gc_europe">Target Audience</p>
     </div>
     <div class="text_accordion">
-        <p class="">We designed this course for participants around the world who are actively interested and engaged in children’s rights work and wish to deepen their knowledge about the protection of children deprived of liberty.</p>
+        <p class="">We designed this course for participants (students; governmental, inter-governmental and non-governmental staff; social workers; researchers; committed citizens…) around the world who are actively interested and engaged in human rights work and wish to gain a general overview of historical and current developments at the international and regional level.</p>
     </div>
+</div>
+
+<!-- TRAILER -->
+<div class="video169_container">
+    <iframe class="video169" src="https://www.youtube.com/embed/ydLxRmB5ETU" frameborder="0" allowfullscreen=""></iframe>
 </div>
