--- a/website/02-Education/moocs/pphr/about.html
+++ b/website/02-Education/moocs/pphr/about.html
@@ -1,4 +1,21 @@
-<!--QUOTE-->
+<!-- STYLE -->
+<style>
+.title_accordion {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+}
+.text_accordion {
+    font-size: 16px;
+    line-height: 22px;
+    margin-top: 10px;
+    margin-left: 20px;
+    display: none;
+}
+</style>
+
+
+<!-- QUOTE -->
 <blockquote>
     <p>
         <strong>The protection and promotion of human rights have only a limited life in the legal phrasings of treaties; they must be given meaning in individual lives.</strong>
