--- a/website/02-Education/moocs/pphr/02-lecturers-part2.html
+++ b/website/02-Education/moocs/pphr/02-lecturers-part2.html
@@ -4,17 +4,20 @@ a[name] {
     margin-top: -92px;
     display: inline-block;
 }
+
+
 </style>
-<div class="table_accordion"><a id="kaj"></a>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/venice-school/2018/faculty/Kalliope_Agapiou_Josephides_venice_school_eiuc_global_campus-2.jpg" alt="Kalliope Agapiou-Josephides - Global Campus">
+<div class="table_accordion">
+    <a name="ya"></a>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/pphr/faculty/Yousra_Abourabi_gchumanrights.jpg" alt="Yousra Abourabi - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <!--<p class="ruolo_persona titolo_gc_europe">Academic Responsible</p>-->
-            <p class="subtitle_page_programme margin_bottom_20">Kalliope Agapiou-Josephides</p>
-            <p class="margin_bottom_20">Prof. Kalliope Agapiou Josephides is the Chairperson of the European Institute for Gender Equality (EU Agency) and former Vice-President of the European Inter University Centre for Human Rights and Democratisation, Venice. She is a founding member of the Mediterranean Women Mediators Network and academic convenor for the Venice School of Human Rights on gender issues.</p>
-            <!--<p class="margin_bottom_20">She holds a PhD in Political Science from Sorbonne University, PARIS I Panthéon-Sorbonne, a Post Graduate Diploma in High European Studies.</p>-->
+            <p class="ruolo_persona titolo_gc_arab">Université Internationale de Rabat - GC Arab World</p>
+            <p class="subtitle_page_programme margin_bottom_20">Yousra Abourabi</p>
+            <p class="margin_bottom_20">Yousra Abourabi is a doctor in political science from the University of Lyon Jean Moulin. Her thesis, defended in 2016, focused on African politics in Morocco. </p>
+            <!-- <p class="margin_bottom_20">She holds a PhD in Political Science from Sorbonne University, PARIS I Panthéon-Sorbonne, a Post Graduate Diploma in High European Studies.</p> -->
             <div class="text_read_more">
-                <p class="margin_bottom_20">She has participated in and led several national and international research projects, including a European Parliament study on “Women in Democratic Transitions”. She has served as academic convenor/speaker at high-level international events and has taught/ delivered lectures across Europe and around the world: e.g. France, Germany, Italy, Belgium, Poland, Portugal, Argentina, India, China, Australia...</p>
-                <p class="margin_bottom_20">Kalliope Agapiou Josephides holds a PhD in Political Science from the Paris I Panthéon - Sorbonne University. She is an Assistant Professor at the University of Cyprus and the recipient of a Jean Monnet Chair (2001). She has a keen interest and extensive experience in the field of gender equality and human rights.</p>
+                <p class="margin_bottom_20">After teaching at the University of Lyon 3, she joined the UIR. As an assistant professor at Sciences po Rabat, she teaches political science, international relations and African governance.</p>
+                <p class="margin_bottom_20"> As a researcher associated with LEPOSHS, she is interested in diplomatic issues and sectoral cooperation (climate, migration, gender) in Africa. She recently published a book on "Morocco" by De Boeck editions.</p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -27,11 +30,11 @@ a[name] {
             </div>
         </div>
     </div>
-    <a id="lb"></a>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/euconvince/Leonce_Bekemans_global_campus_eiuc.png" alt="Prof. Léonce Bekemans - Global Campus">
+    <a name="bc"></a>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/pphr/faculty/Bencharat_Chua_gchumanrights.jpg" alt="Bencharat Chua - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <!--<p class="ruolo_persona titolo_gc_europe">Academic Responsible</p>-->
-            <p class="subtitle_page_programme margin_bottom_20">Léonce Bekemans</p>
+            <p class="ruolo_persona titolo_gc_asia_pacific">Mahidol University, Bangkok - GC Asia Pacific</p>
+            <p class="subtitle_page_programme margin_bottom_20">Bencharat Chua</p>
             <p class="margin_bottom_20">Prof. Bekemans holds the Jean Monnet Chair ad personam “Globalisation, Europeanisation, Human Development” at the University of Padua and is the academic coordinator of its Jean Monnet Centre of Excellence “Intercultural dialogue, Human Rights and Multi-level Governance”.</p>
             <!--<p class="margin_bottom_20">She holds a PhD in Political Science from Sorbonne University, PARIS I Panthéon-Sorbonne, a Post Graduate Diploma in High European Studies.</p>-->
             <div class="text_read_more">
@@ -48,7 +51,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a id="fbr"></a>
+    <a name="fbr"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/euconvince/Florence_Benoit_Rohmer_global_campus_eiuc.jpg" alt="Prof. Florence Bénoît-Rohmer - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <!--<p class="ruolo_persona titolo_gc_europe">Academic Responsible</p>-->
