fixed scroll on #id (lecturers initials)

--- a/website/02-Education/moocs/pphr/02-lecturers-part2.html
+++ b/website/02-Education/moocs/pphr/02-lecturers-part2.html
@@ -1,14 +1,12 @@
 <style>
-a[name] {
-    padding-top: 92px;
-    margin-top: -92px;
+a[id] {
+    padding-top: 92px !important;
+    margin-top: -92px !important;
     display: inline-block;
 }
-
-
 </style>
 <div class="table_accordion">
-    <a name="ya"></a>
+    <a id="ya"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/pphr/faculty/Yousra_Abourabi_gchumanrights.jpg" alt="Yousra Abourabi - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_arab">Université Internationale de Rabat - GC Arab World</p>
@@ -30,7 +28,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="bc"></a>
+    <a id="bc"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/pphr/faculty/Bencharat_Chua_gchumanrights.jpg" alt="Bencharat Chua - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_asia_pacific">Mahidol University, Bangkok - GC Asia Pacific</p>
@@ -51,7 +49,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="fbr"></a>
+    <a id="fbr"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/euconvince/Florence_Benoit_Rohmer_global_campus_eiuc.jpg" alt="Prof. Florence Bénoît-Rohmer - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <!--<p class="ruolo_persona titolo_gc_europe">Academic Responsible</p>-->
