Sriprapha Petcharamesree bio

--- a/website/02-Education/moocs/pphr/02-lecturers-part2.html
+++ b/website/02-Education/moocs/pphr/02-lecturers-part2.html
@@ -33,10 +33,9 @@ a[id] {
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_asia_pacific">Mahidol University, Bangkok - GC Asia Pacific</p>
             <p class="subtitle_page_programme margin_bottom_20">Bencharat Chua</p>
-            <p class="margin_bottom_20">Prof. Bekemans holds the Jean Monnet Chair ad personam “Globalisation, Europeanisation, Human Development” at the University of Padua and is the academic coordinator of its Jean Monnet Centre of Excellence “Intercultural dialogue, Human Rights and Multi-level Governance”.</p>
-            <!--<p class="margin_bottom_20">She holds a PhD in Political Science from Sorbonne University, PARIS I Panthéon-Sorbonne, a Post Graduate Diploma in High European Studies.</p>-->
+            <p class="margin_bottom_20">Sriprapha Petcharamesree is a lecturer at the Institute of Human Rights and Peace Studies, Mahidol University, Thailand.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">He has an interdisciplinary profile with a broad teaching and research experience in European studies and an international publication record. His main research interests relate to the broad area of value-oriented integration studies with a focus on the relations between economy, polity, culture and society from various perspectives. He is also a visiting professor at the Catholic University of Milan and collaborates with the University Institute Sophia and its Global Studies Centre (Loppiano, Italy).</p>
+                <p class="margin_bottom_20">She was appointed by the Thai Government the Thai representative to the ASEAN Intergovernmental Commission on Human Rights where she was serving between October 2009 and December 2012.Her research and expertise focus on human rights, ASEAN/Southeast Asian studies, migration, including statelessness and citizenship, business and human rights, and international relations. </p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
